<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nikan.clickpaz.nikantest.MenuActivity"
    tools:showIn="@layout/app_bar_menu"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_margin="26dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:elevation="5dp"
        app:cardBackgroundColor="#8E24AA"
        android:id="@+id/sweets_card"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF"
            android:layout_gravity="center_vertical|left"
            >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sweets"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="16dp"
            android:textColor="@color/transparent_grey"
            android:shadowColor="#EEEEEE"
            android:textSize="22sp"

            />
        </LinearLayout>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/sweets"
            android:layout_gravity="center_vertical|right"/>

    </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_margin="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:elevation="5dp"
            app:cardBackgroundColor="#00E676"
            android:id="@+id/buguette_card"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#FFFFFF"
                android:layout_gravity="center_vertical|left"
                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/baget"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="16dp"
                android:textColor="@color/transparent_grey"
                android:shadowColor="#EEEEEE"
                android:textSize="22sp"


                />
            </LinearLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/baguette"
                android:layout_gravity="center_vertical|right"/>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_margin="26dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:elevation="5dp"
            app:cardBackgroundColor="#FFD54F"
            android:id="@+id/breads_card"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#FFFFFF"
                android:layout_gravity="center_vertical|left"
                >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bread"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="16dp"
                android:textColor="@color/transparent_grey"
                android:shadowColor="#EEEEEE"
                android:textSize="22sp"


                />
            </LinearLayout>

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/bread"
                android:layout_gravity="center_vertical|right"/>

        </android.support.v7.widget.CardView>


    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
